--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Nighthawk Pages 
 description: "Class of 2025"
 owner_name: Santhosh Karthik
-github_username: sANthoshKarthIk0792make
+github_username: sANthoshKarthIk0792
 github_repo: "Santhosh_2025" 
 baseurl: "/Santhosh_2025"
 future: true
